--- a/final-project/index.html
+++ b/final-project/index.html
@@ -143,13 +143,25 @@
                 </div>
             </section>
             <!-- Our Team Section -->
-            <section>
+            <section class="our-team">
                 <div class="wrapper">
                     <h1>Our Team</h1>
-                    <div class="ceo2">
+                    <div class="ceo">
                         <img src="/images/john.jpg" alt="">
-                        <div class="ceo2-content">
+                        <div class="ceo-content">
                             <h2>John Doe</h2>
+                            <h6>CEO and Co-owner</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur similique porro eveniet consequuntur. Vel nulla corporis natus ratione id saepe voluptatem inventore repellat, explicabo alias molestiae odit expedita veniam consequuntur.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="wrapper">
+                    <div class="ceo">
+                        <img src="/images/bob.jpg" alt="">
+                        <div class="ceo-content">
+                            <h2>Bob Rite</h2>
                             <h6>CEO and Co-owner</h6>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur similique porro eveniet consequuntur. Vel nulla corporis natus ratione id saepe voluptatem inventore repellat, explicabo alias molestiae odit expedita veniam consequuntur.</p>
                         </div>
@@ -164,7 +176,7 @@
                         <h2>Send us a message</h2>
                     </div>
                     <div class="location">
-                        <h2>location</h2>
+                        <h2>Location</h2>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.9445518045636!2d-75.75712548379654!3d45.349931549080814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1649041435460!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <div class="operation">
