--- a/final-project/index.html
+++ b/final-project/index.html
@@ -47,7 +47,9 @@
             <div class="wrapper">
                 <div class="banner-content">
                     <h1>Welcome to Three Star Media</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas autem aut ad velit reprehenderit quis corporis, in doloremque corrupti necessitatibus consequatur!</p>
+                    <div class="banner-description">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas autem aut ad velit reprehenderit quis corporis, in doloremque corrupti necessitatibus consequatur!</p>    
+                    </div>
                     <div class="connect-button">
                         <a href="#connect">Connect with us<i class="fa-solid fa-caret-right"></i></a>
                     </div>
@@ -172,12 +174,20 @@
             <section>
                 <div class="wrapper">
                     <h1>Contact Us</h1>
-                    <div class="message">
-                        <h2>Send us a message</h2>
-                    </div>
-                    <div class="location">
-                        <h2>Location</h2>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.9445518045636!2d-75.75712548379654!3d45.349931549080814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1649041435460!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <h2>Send us a message</h2>
+                    <div class="contact-form">
+                        <form action="#">
+                            <label for="name">Full Name</label>
+                            <input type="text" placeholder="" name="search">
+                        </form>
+                        <form action="#">
+                            <label for="email">Email</label>
+                            <input type="text" placeholder="" name="search">
+                        </form>
+                        <form action="#">
+                            <label for="Message">Message</label>
+                            <input type="text" placeholder="" name="search">
+                        </form>
                     </div>
                     <div class="operation">
                         <h2>Hours of operation</h2>
@@ -195,6 +205,13 @@
                                 <td>Closed</td>
                             </tr>
                         </table>
+                    </div>
+                    <div class="message">
+                        <h2>Send us a message</h2>
+                    </div>
+                    <div class="location">
+                        <h2>Location</h2>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.9445518045636!2d-75.75712548379654!3d45.349931549080814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1649041435460!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </section> 
