--- a/final-project/index.html
+++ b/final-project/index.html
@@ -171,23 +171,26 @@
                 </div>
             </section>
             <!-- Contact Us -->
-            <section>
+            <section class="contact-section">
                 <div class="wrapper">
                     <h1>Contact Us</h1>
                     <h2>Send us a message</h2>
                     <div class="contact-form">
                         <form action="#">
                             <label for="name">Full Name</label>
-                            <input type="text" placeholder="" name="search">
+                            <input id="name" name="search" style="height: 30px;">
                         </form>
                         <form action="#">
                             <label for="email">Email</label>
-                            <input type="text" placeholder="" name="search">
+                            <input id="email" name="email" style="height: 30px;">
                         </form>
                         <form action="#">
                             <label for="Message">Message</label>
-                            <input type="text" placeholder="" name="search">
+                            <textarea name="message" id="message" style="height: 200px;"></textarea>
                         </form>
+                        <div class="send">
+                          <a href="#Send">Send</a>
+                        </div>
                     </div>
                     <div class="operation">
                         <h2>Hours of operation</h2>
@@ -197,17 +200,14 @@
                                 <th>Hours</th>
                             </tr>
                             <tr>
-                                <td>Monday-Friday</td>
-                                <td>Saturday-Sunday</td>
+                                <td>Monday - Friday</td>
+                                <td>9 AM - 6 PM</td>
                             </tr>
                             <tr>
-                                <td>9 AM - 6 PM</td>
+                                <td>Saturday - Sunday</td>
                                 <td>Closed</td>
                             </tr>
                         </table>
-                    </div>
-                    <div class="message">
-                        <h2>Send us a message</h2>
                     </div>
                     <div class="location">
                         <h2>Location</h2>
